<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/daftarkelas"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/daftarkelas" />
        <item
            android:id="@+id/jadwal"
            android:icon="@drawable/ic_assignment_turned_in_black_24dp"
            android:title="@string/jadwal" />
        <item
            android:id="@+id/buktibayar"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/uploadbukti" />
    </group>
    <item
        android:id="@+id/logout"
        android:icon="@drawable/logout"
        android:title="@string/logout" />

</menu>
