<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:background="@color/background">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/lblidkelas"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/kelas"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblnamainstruktur"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@id/lblidkelas"
                android:layout_marginBottom="15dp"
                android:paddingTop="10dp"
                android:text="@string/namainstruktur" />

            <TextView
                android:id="@+id/lblwaktu"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignEnd="@+id/lblidkelas"
                android:layout_alignRight="@+id/lblidkelas"
                android:layout_centerVertical="true"
                android:paddingTop="10dp"
                android:text="@string/waktu" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>