<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activities.Taketheclassroom">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/namakelas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        tools:ignore="UselessLeaf" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/lbdeskripsi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/deskripsi"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />
            </ScrollView>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        tools:ignore="UselessLeaf" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/imgbuktibayar"
                tools:ignore="ContentDescription"/>

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/rlimage"
                android:background="@drawable/custom_button">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/no_file"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/fileupload"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:text="@string/fileupload"
                android:layout_below="@+id/imgbuktibayar"/>

            <Button
                android:id="@+id/btnupload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:text="@string/upload"
                tools:ignore="RelativeOverlap,RtlCompat" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:id="@+id/daftarkelas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/daftarkelas"
            android:textColor="@color/mdtp_white"
            android:textSize="20dp"
            tools:ignore="SpUsage" />
    </RelativeLayout>

</LinearLayout>