<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".activities.Registrasi">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_nim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/et_nim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:hint="@string/nim"
                    android:inputType="textAutoComplete"
                    android:paddingLeft="10dp"
                    android:textAlignment="textStart"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_firstnama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/et_firstnama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:hint="@string/firstname"
                    android:inputType="textAutoComplete"
                    android:paddingLeft="10dp"
                    android:textAlignment="textStart"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_lastnama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/et_lastnama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:hint="@string/lastname"
                    android:inputType="textAutoComplete"
                    android:paddingLeft="10dp"
                    android:textAlignment="textStart"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:textAlignment="textStart"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_prodi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <Spinner
                    android:id="@+id/cmbprodi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:inputType="textAutoComplete"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textAlignment="textStart" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/mdtp_transparent_black" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/fileuploadgambar"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/fileuploadgambar" />

                <Button
                    android:id="@+id/btnupload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/upload"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/mdtp_transparent_black"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"

                    android:drawableRight="@drawable/ic_visibility_off_black_24dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:textAlignment="textStart"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <Button
                    android:id="@+id/btndaftar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/daftar" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>