<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/llsignin"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingTop="25dp"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:src="@mipmap/ic_launcher"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_person_black_24dp"
            android:tint="@android:color/darker_gray"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/ediduser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/colorDivider"
            android:hint="@string/iduser"
            android:inputType="textAutoComplete"
            android:textSize="14sp"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_lock_black_24dp"
            android:tint="@android:color/darker_gray"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/edpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:drawableRight="@drawable/ic_visibility_off_black_24dp"
            android:backgroundTint="@color/colorDivider"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="14sp"
            tools:ignore="RtlHardcoded,UnusedAttribute" />

    </LinearLayout>

    <Button
        android:id="@+id/btnsignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:padding="17dp"
        android:text="@string/signin"
        android:textColor="@android:color/white"
        app:backgroundTint="@android:color/holo_green_dark"
        tools:ignore="MissingPrefix" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Belum punya akses login ?"
        tools:ignore="HardcodedText,ObsoleteLayoutParam" />

    <TextView
        android:id="@+id/edsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/signup"
        android:textColor="@android:color/holo_green_dark"
        tools:ignore="ObsoleteLayoutParam" />
</LinearLayout>